# invoiceagent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: ARCHITECTURE.md  SCHEMA.md
scripts/: init_db.py
src/: config.py
src/agents/: __init__.py  qa_agent.py  structuring_agent.py  vision_agent.py
src/agents/prompts/: qa_scoring.py  structuring.py  vision_extraction.py
src/models/: __init__.py  delivery.py  extraction.py  invoice.py  qa.py
src/pipeline/: delivery.py  ingest.py  orchestrator.py  review_queue.py
src/utils/: anthropic_client.py  database.py  logging.py
tests/: test_anthropic_client.py  test_config.py  test_database.py  test_delivery.py  test_ingest.py  test_logging.py  test_models.py  test_orchestrator.py  test_qa_agent.py  test_review_queue.py  test_structuring_agent.py  test_vision_agent.py
