[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoiceagent"
version = "0.1.0"
description = "AI-powered invoice processing service for SMB manufacturing and distribution companies."
requires-python = ">=3.11"

dependencies = [
    "anthropic",
    "pydantic",
    "pdf2image",
    "Pillow",
    "python-dotenv",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
phase2 = [
    "fastapi",
    "uvicorn",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
